[package]
name = "asset-forge"
version = "0.3.0"
edition = "2021"
description = "A unified game asset processing CLI tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/esengine/asset-forge"
keywords = ["gamedev", "assets", "optimization", "cli", "texture"]
categories = ["command-line-utilities", "game-development", "multimedia::images"]
authors = ["esengine"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.25"
oxipng = "9"

# KTX2/Basis Universal texture compression
basis-universal = "0.3"

# glTF processing
gltf = "1.4"

# Mesh optimization (meshoptimizer bindings)
meshopt = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

# Audio processing
symphonia = { version = "0.5", features = ["all"] }
vorbis_rs = "0.5"
hound = "3.5"

# File system
walkdir = "2.5"
notify = "8"
globset = "0.4"
ctrlc = "3.4"

# Parallel processing
rayon = "1.10"
num_cpus = "1.16"

# Error handling
anyhow = "1.0"
thiserror = "2"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
console = "0.15"

# Hashing for incremental builds
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Texture packing (for sprite atlas)
texture_packer = "0.30"

# Compression for cache
lz4_flex = "0.11"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "asset-forge"
path = "src/main.rs"
